After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 755611 - aacparse: wrong LOAS config reading
aacparse: wrong LOAS config reading
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.6.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
: 752310 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2015-09-25 08:10 UTC by Guillaume Marquebielle
Modified: 2015-09-26 12:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch fixing the issue (1.61 KB, patch)
2015-09-25 08:10 UTC, Guillaume Marquebielle
none Details | Review

Description Guillaume Marquebielle 2015-09-25 08:10:07 UTC
Created attachment 312113 [details] [review]
Patch fixing the issue

I've been testing some LOAS streams on Danish DVBT live tv.

On reading LOAS config, flag v=1 and vA=1 combination can sometimes occur, leading to warning "Spec says "TBD"...".
Returning TRUE on this case while parameters 'sample_rate' and 'channels' are pointing to uninitialized values can end on setting random values as rate and channels on src caps.

I've added a simple patch initializing the concerned variables to fix this. I think it's more secure to also return FALSE in this use case.
Comment 1 Tim-Philipp Müller 2015-09-25 08:27:01 UTC
There's also another bug about this where returning FALSE is suggested as fix.

A short sample that triggers this would be great.
Comment 2 Guillaume Marquebielle 2015-09-25 08:54:54 UTC
It's really not simple to record some stream reproducing this issue, as it depends on the moment you start streaming and reading first LOAS frames configs on live streams.

Even if the "return FALSE" statement in this case can be discussed, the uninitialized values are clearly an error leading to some wrong rate and channels values on src caps.

I'll think about a way to provide some stream reproducing it.

Can you please give the link to the bug already reported that you mentined ?
Comment 3 Tim-Philipp Müller 2015-09-25 09:02:58 UTC
I was thinking of bug #752310 but perhaps it's not the same. I don't have time to look in detail right now.
Comment 4 Jan Schmidt 2015-09-26 12:05:23 UTC
That bug does exactly this fix, but this one also has the extra variable initialisations, so we should take this patch.
Comment 5 Jan Schmidt 2015-09-26 12:08:44 UTC
*** Bug 752310 has been marked as a duplicate of this bug. ***
Comment 6 Jan Schmidt 2015-09-26 12:20:29 UTC
Thanks, pushed: commit 35139ee8b7e165b1d0ec69f17401b3e7c3953981
Author: Guillaume Marquebielle <guillaume.marquebielle@parrot.com>
Date:   Fri Sep 25 10:01:37 2015 +0200

    aacparse: fix uninitialized variables in LOAS config reading
    
    On reading LOAS config, flag v=1 and vA=1 combination can occur, leading to warning
    "Spec says "TBD"...". Returning TRUE on this case while parameters 'sample_rate' and
    'channels' are pointing to uninitialized values can end on setting random values as
    rate and channels on src caps.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=755611